; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_switch_ctx.c_switch_ctx_get_video_size.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_switch_ctx.c_switch_ctx_get_video_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32*)* @switch_ctx_get_video_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @switch_ctx_get_video_size(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = call i32 (...) @appletGetOperationMode()
  switch i32 %10, label %11 [
    i32 128, label %12
    i32 129, label %15
  ]

11:                                               ; preds = %3
  br label %12

12:                                               ; preds = %3, %11
  %13 = load i32*, i32** %5, align 8
  store i32 1280, i32* %13, align 4
  %14 = load i32*, i32** %6, align 8
  store i32 720, i32* %14, align 4
  br label %18

15:                                               ; preds = %3
  %16 = load i32*, i32** %5, align 8
  store i32 1920, i32* %16, align 4
  %17 = load i32*, i32** %6, align 8
  store i32 1080, i32* %17, align 4
  br label %18

18:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @appletGetOperationMode(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
